--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,20 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
-  video_player: ^2.6.0
-  bordered_text: ^2.0.0
+  cupertino_icons: 1.0.2
+  google_fonts: 4.0.3
+  video_player: 2.6.0
+  bordered_text: 2.0.0
+  flutter_bloc: 8.1.2
+  json_serializable: 6.6.1
+  json_annotation: 4.8.0
+  freezed_annotation: 2.2.0
+  dio: 5.0.2
+  dartz: 0.10.1
+  get_it: 7.2.0
+  injectable: 
+  share_plus: 6.3.1
+  intl: 0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +59,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
+  injectable_generator: ^2.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 assets:
   - lib/assets/images/Netflix-PNG-Logo--768x768.jpeg
+  - lib/assets/images/Netflix-logo.webp
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
